syntax = "proto3";

package myproject.fakeapp;

service EnumController {
    rpc BasicEnumRequest(EnumBasicEnumRequest) returns (EnumBasicEnumRequestResponse) {}
    rpc BasicEnumRequestWithSerializer(EnumServiceRequest) returns (EnumServiceResponse) {}
}

message EnumBasicEnumRequest {
    MyGRPCActionEnum.Enum enum_example = 1;
}

message EnumBasicEnumRequestResponse {
    string value = 1;
}

message EnumServiceRequest {
    optional int32 id = 1;
    EnumServiceCharChoicesEnum.Enum char_choices = 2;
}

message EnumServiceResponse {
    optional int32 id = 1;
    EnumServiceCharChoicesEnum.Enum char_choices = 2;
}

// This is my GRPC Action Enum
message MyGRPCActionEnum {
    enum Enum {
        ENUM_UNSPECIFIED = 0;
        // This is value 1
        VALUE_1 = 1;
        VALUE_2 = 2;
    }
}

message EnumServiceCharChoicesEnum {
    enum Enum {
        ENUM_UNSPECIFIED = 0;
        VALUE_1 = 1;
        VALUE_2 = 2;
    }
}

